testing/framework/resources/Advanced/Failing/mondrian/query6118.q
select store.store_country as c0, store.store_state as c1, store.store_city as c2, store.store_name as c3, store.store_type as c4, store.store_manager as c5, store.store_sqft as c6, store.grocery_sqft as c7, store.frozen_sqft as c8, store.meat_sqft as c9, store.coffee_bar as c10, store.store_street_address as c11, customer.country as c12, customer.state_province as c13, customer.city as c14, customer.customer_id as c15, fullname as c16, fullname as c17, customer.gender as c18, customer.marital_status as c19, customer.education as c20, customer.yearly_income as c21 from store as store, sales_fact_1997 as sales_fact_1997, customer as customer, time_by_day as time_by_day where sales_fact_1997.store_id = store.store_id and sales_fact_1997.customer_id = customer.customer_id and sales_fact_1997.time_id = time_by_day.time_id and time_by_day.the_year = 1997 and time_by_day.quarter = 'Q1' and time_by_day.month_of_year = 1 and (store.store_name = 'Store 14') and (customer.city = 'Palo Alto' and customer.state_province = 'CA') group by store.store_country, store.store_state, store.store_city, store.store_name, store.store_type, store.store_manager, store.store_sqft, store.grocery_sqft, store.frozen_sqft, store.meat_sqft, store.coffee_bar, store.store_street_address, customer.country, customer.state_province, customer.city, customer.customer_id, fullname, customer.gender, customer.marital_status, customer.education, customer.yearly_income order by store.store_country ASC NULLS LAST, store.store_state ASC NULLS LAST, store.store_city ASC NULLS LAST, store.store_name ASC NULLS LAST, customer.country ASC NULLS LAST, customer.state_province ASC NULLS LAST, customer.city ASC NULLS LAST, fullname ASC NULLS LAST;
